Configuracion de las ventanas y los controllers